@@ -51,6 +51,7 @@ mod pool;
 pub use error::{PoisonError, TryLockError, UnpoisonError};
 pub use pool::pool_sync::SyncLockPool;
 pub use pool::LockPool;
+pub use guard::Guard;
 
 #[cfg(feature = "tokio")]
 pub use pool::pool_async::{AsyncLockPool, TokioLockPool};
